--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react-dom": "^18.0.0",
     "@types/recharts": "^1.8.24",
     "antd": "^5.6.4",
+    "axios": "^1.4.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.7.2",
+    "redux-saga": "^1.2.3",
     "styled-components": "^6.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
