--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.7.2",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "styled-components": "^6.0.2",
     "typescript": "^4.4.2",
@@ -53,6 +54,5 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26"
-  },
-  "proxy": "https://openapi.naver.com"
+  }
 }
