--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/recharts": "^1.8.24",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
